TestSuite/PascalABCTests/errors/err0155.pas
 	 type TClass<T> = class where T:System.Void;
end;

begin
end. 